# py-plugin-architecture

./: .gitignore  README.md  makefile  pyproject.toml  triple_des.py
plugins/: aes.py  rsa.py  triple_des.py_uninstalled
plugins_not_installed/: binary.py  hex.py  triple_des.py
pycypher/: __init__.py  constants.py  cypher_protocol.py  plugin_factory.py  plugin_loader.py  plugin_manager.py  server.py
pycypher/plugins/: aes.py  rsa.py  triple_des.py
pycypher/static/: styles.css
pycypher/templates/: constants.py  cyphers.py  index.html  list_cyphers.py  run_cyphers.html
tests/: test_plugins.py
