[tool.poetry]
name = "pycypher"
version = "0.1.0"
description = "A simple example of a Python Plugin Architecture"
authors = ["Ualter Otoni <ualter.junior@gmail.com>"]
readme = "README.md"
packages = [{include = "pycypher"}]

[tool.poetry.dependencies]
python = "^3.8"
python-multipart = "^0.0.5"
jinja2 = "^3.1.2"
rsa = "^4.9"
pycryptodome = "^3.15.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[tool.poetry.scripts]
server = "pycypher.server:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
